home page tweaks

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -137,9 +137,9 @@
 				
 				<b class="subheader-4">Design, Develop, Demo, Repeat</b>
 				<div class="subheader-2">Every 3 weeks for 9 months</div>
-				<div style="margin-bottom: 5%">Our project was broken into 3-week sprints, which were segmented into 3-sprint 'Program Increments' (PIs). About halfway through, we moved from Web design to Mobile.</div>
+				<div style="margin-bottom: 5%">Our project was broken into 3-week sprints. In a typical sprint, I design the MVP interface(s) that would be developed in the following sprint while also designing enhancements for existing features. The team built the Web interface first, and then transitioned to Mobile.</div>
 				
-				<p>Two things to keep in mind: this was a 1.0 product, so we often designed and built entire flows in just a few weeks. Plus, the team was brand-new and had never worked together before. So, our design sprints rarely went 100% according to plan. Regardless, our process was highly iterative and fast-paced.</p>
+				<p>This was a 1.0 product, so we often designed and built entire flows in just a few weeks. Our process was highly iterative and fast-paced.</p>
 			</div>
 	</div>
 
@@ -147,8 +147,8 @@
 		<div class="subheader-3 left">Research Insights</div>
 
 		<div class="body right">
-		Because research took place 4 months late, its purpose shifted from open-ended exploration to confirmation: validating the assumptions we'd already acted on and tweaking requirements that had already been defined. Not an ideal situation - but better late than never!
-		<p>We didn't have time to spend weeks processing interview data, synthesizing it with an affinity diagram, and defining a product vision. We were already building primary features! Instead, I took 2 weeks to sift through all the notes, build out a wiki-style report with quotes and pictures, and condense that report into a PowerPoint presentation for the client. Below are some of the most important insights we confirmed and learned about the shopping experience.</p>
+		Because research took place 4 months late, its purpose shifted from open-ended exploration to confirmation: validating the assumptions we'd already acted on and tweaking requirements that had already been defined. It wasn't an ideal situation - but better late than never!
+		<p>After my design lead returned from the site visits, I took 2 weeks to sift through all the notes, build out a wiki-style report with quotes and pictures, and condense that report into a PowerPoint presentation for the client. Below are some of the most important insights we confirmed and learned about the shopping experience.</p>
 		<img src="pics/fms/exec-summary.png" class="pic-right" style="background-color: #E7F4FD" alt="A PowerPoint presentation graphic showing Key Themes">
 		<div class="subheader-2">Flexibility</div>
 			Participating organizations use two different methods for checkout: manual and store concept. At manual locations, program staff step through each food category and enter the units selected manually. In the grocery store model, a customer shops in a warehouse, following an approved grocery list, and a staff member checks them out using a barcode scanner
@@ -191,7 +191,7 @@
 	<div class="panel" id="web-ia">
 		<div class="subheader-3 left">Web Information Architecture</div>
 		<div class="body right">
-			By the time I joined the team, the top-level IA had already been defined. The structure of Salesforce also introduced some navigation and organization constraints. My primary role with the Web IA was to document, analyze, and work with the team to ensure it made as much sense as possible given the technical constraints. I built out documentation covering the platform considerations, a comparison of the legacy vs new systems, a deep dive of the new IA, and a summary of improvements and challenges.
+			By the time I joined the team, the top-level IA had already been defined. My primary role with the Web IA was to document, analyze, and work with the team to ensure it made as much sense as possible given the technical constraints. I built out documentation covering the platform considerations, a comparison of the legacy vs new systems, a deep dive of the new IA, and a summary of improvements and challenges.
 			<img src="pics/fms/web-ia-deck.png" class="pic-right" style="background-color: #E7F4FD" alt="A PowerPoint presentation graphic showing Salesforce Structure, Path Analysis, and and Overview comparison of the legacy system vs the new system">
 			
 			<p>These were some of the primary improvements:</p>
@@ -215,7 +215,7 @@
 
 			<img src="pics/fms/web-ia-overview.png" class="pic-right" style="background-color: #E7F4FD" alt="A sitemap diagram with four top-level menu items: Household Certification, Inventory, Issuance, and Organization Management">
 			<p>
-				While the team solved many important problems, there are still plenty of challenges associated with the new IA. As you can see in the sitemap above, the organizational structure is still fairly complex. Modernizing a legacy system will always present challenges: in this case, inline links add more paths and complexity, Salesforce temporary tabs are an unfamiliar concept for many, and technical data does not cater to every user. Read on below for some of the remaining challenges I identified.
+				While the team solved many important architecture problems, there are still plenty of challenges associated with the new IA. As you can see in the sitemap above, the organizational structure is still fairly complex. Modernizing a legacy system will always present challenges: in this case, inline links add more paths and complexity, Salesforce temporary tabs are an unfamiliar concept for many, and technical data does not cater to every user. Read on below for some of the remaining challenges I identified.
 			</p>
 			
 			<div class="subheader-4">More Paths, More Complexity</div> 
