--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 				<div style="font-family:'Tokyo-Regular'; color:black">Emily Porat</div> 
 				<div>UX Designer</div>
 				 <p id="intro-2">
-				 	Currently @ Deloitte Digital in Washington DC, where I work with government agencies to modernize systems that matter.
+				 	Currently @ Deloitte Digital in <i class="fa fa-map-marker" style="padding-right: 4px"></i>Washington DC, where I work with government agencies to modernize systems that matter.
 				</p>
 			</div>
 	</div>
@@ -128,7 +128,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<div class="project-info">
 			<div class="proj-header">Learning & Development Portal</div>
 			<div class="subheader-4">Website through which employees request continuing education programs.</div>
-			<div class="subheader-2">SUMMER 2019 • DELOITTE DIGITAL</div>
+			<div class="subheader-2">SUMMER 2018 • DELOITTE DIGITAL</div>
 			<div class="tags" style="margin-top: 30px">
 				<div class="tag">UX</div>
 				<div class="tag">user research</div>
