wrote browse/select section

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -385,26 +385,68 @@
 	<div class="panel" id="mobile-design-1">
 		<div class="subheader-3 left">Select a Household</div>
 		<div class="body right">
-
+			<div>
+				The home screen displays every household in a user's organization. Originally, we considered conditionally showing the "Issue" button only if the household could be issued to, but the logic to determine that depended on too many factors. We decided that hiding the Issue button would be more of a distraction than an aid. Instead, we trigger an alert explaining why users can't issue after tapping the button. The established business process is to check a household's certification <i>before</i> issuing, so the scenario where the household can't be issued to should be quite rare.
+			</div>
+			
+			<img src="pics/fms/mobile-design-1.png" class="pic-right" style="border:none" alt="An iPad with the Home page open to a list of households">
+			
+			<p><div class="subheader-4" style="margin-top: 5%">Enhancements</div></p>
+				<ul>
+					<li>The Status field is independent of the Certification Period field. Showing both fields clutter the UI - a proposed enhancement is to combine them into one Certification Status encapsulating both fields.</li>
+					<li>This household list could be very long for some of the larger organizations. To make browsing (rather than searching) more viable, we considered implementing a check-in / queue system for participants so that this page could be more of a checklist. On the simpler end, we could provide a way to filter the view by last issuance date so users could just see the households that haven't received their food yet.</li>
+				</ul>
 		</div>
 	</div>
 
-	<div class="panel" id="mobile-design-2">
-		<div class="subheader-3 left">Browse Categories & Select Items</div>
+	<div class="panel gray" id="mobile-design-2">
+		<div class="subheader-3 left">Browse & Select</div>
 		<div class="body right">
 
+			<div>
+				There are several primary item selection patterns we observed through our research: 
+				<ul>
+					<li>Follow a prescribed grocery list</li> 
+					<li>Walk through the entire system to see what's in stock</li>
+					<li>Choose a few specific items</li> 
+				</ul>
+				I also considered the amount and structure of the data:
+				<ul>
+					<li>Every category except Fruits & Vegetables has fewer than 35 unique products; Vegetables has 65.</li>
+					<li>5 of 11 categories have sub-categories</li>
+					<li>Categories, sub-categories, and products are subject to change on a quarterly basis</li>
+				</ul>
+
+				<p>The goal for these screens was to provide flexibility to adapt to every use case.</p>
+				
+				<img src="pics/fms/mobile-design-2.png" class="pic-right" style="border:none" alt="An iPad with the Home page open to a list of households">
+
+				<div class="subheader-4">Category Overview</div>
+				<p>
+					The categories page is designed with simplicity, consistency, and select-ability in mind. The interface is meant to be clean and distraction-free. We know that not every household will want to 'fill up' their limits. Some households do partial issuance on a weekly basis, and some simply don't have the goal of taking every single item available to them, simply due to personal preference. Because of this, categories are not visually differentiate based on number of remaining items.
+				</p>
+
+				<div class="subheader-4" style="margin-top: 5%">Materials List</div>
+				<p>The hierarchy is structured to support eye tracking (scan-ability), proximity of related information, and simplicity. Everyone knows the names of food, but not everyone knows the material codes associated with every item. Sorting alphabetically caters to the lowest common denominator. The interactive elements on this screen are purposefully limited to keep it simple.</p>
+			</div>
+			
+			<p><div class="subheader-4" style="margin-top: 5%">Enhancements</div></p>
+				<ul>
+					<li>The uniform Categories interface makes it difficult to differentiate between states (complete / in progress / not started) and understand progress. To clarify status & progress, we could implement a user controlled checklist, which would make the screen more easily scan-able by enabling users to quickly differentiate between categories in different states.</li>
+					<li>Constraining the ordering and filtering ability simplifies the UI, but is limiting. To provide more flexibility for different use cases and preferences, adding sort/filter ability is recommended</li>
+				</ul>
 		</div>
 	</div>
 
 	<div class="panel" id="mobile-design-3">
-		<div class="subheader-3 left">Review the Order & Submit</div>
+		<div class="subheader-3 left">Review & Submit</div>
 		<div class="body right">
 
 		</div>
 	</div>
 
 	<div class="panel" id="mobile-design-4">
-		<div class="subheader-3 left">View Order History & Details</div>
+		<div class="subheader-3 left">Order History</div>
 		<div class="body right">
 
 		</div>
