--- a/fms-pos.html
+++ b/fms-pos.html
@@ -96,7 +96,7 @@
 			<div class="body right">
 				<b class="subheader-4">Who</b>
 				<p>
-					Our users are government employees, but operate fairly independently of their parent agency. They are embedded into communities within over 100 organizations across the country, so each site has unique processes, attitudes, and perspectives. That said, every user we spoke with shared one key trait: they care deeply about helping feed those in need.
+					Our users are government employees, but they operate independently of their parent agency. They are embedded in communities in over 100 organizations across the country, and each site has unique processes, attitudes, and perspectives. That said, every user we spoke with shared one key trait: they cared deeply about helping feed those in need.
 				</p>
 
 				<b class="subheader-4">What & Why</b>
