--- a/fms-pos.html
+++ b/fms-pos.html
@@ -104,7 +104,7 @@
 					The legacy system was long overdue for an upgrade. It had a number of inefficiencies that forced users to change their business processes to match the system. For example, some organizations ordered their physical stores around the (un-sortable) catalog provided in the legacy system to make data entry easier.
 				</p>
 				<p>
-					One of my focus areas was designing an intuitive POS system that can serve every user well. Designing this interface was highly complex for a few reasons (see <a href="#research" style="color: #6EA3E9">Research Insights</a> section below for more):
+					One of my focus areas was designing an intuitive POS system that can serve every user well. Designing this interface was complex for a few reasons (see <a href="#research" style="color: #6EA3E9">Research Insights</a> section below for more):
 					<ul>
 						<li>Technical limitations - Salesforce isn't meant to be a POS, and our users are not using touchscreen devices (for the web channel). The most difficult technical requirement was handling barcode scanning.</li>
 						<li>Government-imposed limits on each food category - these limits have to be displayed and monitored so that users don't exceed them.</li>
