--- a/fms-pos.html
+++ b/fms-pos.html
@@ -202,7 +202,7 @@
 		<div class="subheader-3 left">Web IA</div>
 		<div class="body right">
 			By the time I joined the team, the top-level IA had already been defined. My primary role with the Web IA was to document, analyze, and work with the team to ensure it made as much sense as possible given the technical constraints. I built out documentation covering the platform considerations, a comparison of the legacy vs new systems, a deep dive of the new IA, and a summary of improvements and challenges.
-			<img src="pics/fms/web-ia-deck.png" class="pic-right" style="background-color: #E7F4FD" alt="A PowerPoint presentation graphic showing Salesforce Structure, Path Analysis, and and Overview comparison of the legacy system vs the new system">
+			<img src="pics/fms/web-ia-deck.png" class="pic-right" style="background-color: #E7F4FD" alt="A PowerPoint presentation graphic showing Salesforce Structure, Path Analysis, and an Overview comparison of the legacy system vs the new system">
 			
 			<p>These were some of the primary improvements:</p>
 			
