--- a/fms-pos.html
+++ b/fms-pos.html
@@ -255,7 +255,7 @@
 
 				<p>Manual mode provides one simple table-centric interface, and the store mode provides two interfaces for data entry: Search and QuickScan. Search is meant for users who prefer to find items by searching, sorting, and filtering. Users can still scan items in search mode.</p>
 
-				<p>QuickScan is a lightweight interface for users who primarily rely on barcode scanning, and don't want move their hands off the keyboard. Users navigate using tab / shift-tab to move between the barcode or quantity fields. Users can always switch between interfaces with the dropdown in the top right corner.</p>
+				<p>QuickScan is a lightweight interface for users who primarily rely on barcode scanning, and only touch the keyboard to change an item's quantity. Users navigate using tab / shift-tab to move between the barcode or quantity fields. Users can always switch between interfaces with the dropdown in the top right corner.</p>
 			
 			<p><div class="subheader-4" style="margin-top: 5%">Why it Works</div></p>
 				<div class="subheader-2">Accuracy & Trust</div>
