--- a/fms-pos.html
+++ b/fms-pos.html
@@ -316,7 +316,7 @@
 		<div class="body right">
 			<div class="subheader-4">How it Works</div>
 				<p>Given the complex business logic surrounding limitations (category limits, inventory limits, etc.), we had to consider the error management strategy.</p>
-				<p>Different error types trigger tailored error messages. These error messages are accompanied with a buzzer sound, since not all users are going to be looking at the screen as they scan items. We allow users to dismiss errors and return to the interface to resolve them there (rather than barring users from committing the error at all). We safeguard invalid data entry by showing inline error messages for unresolved items (for inventory errors), error notifications on the category tree (for category limit errors), and an error summary if the user tries to submit the transaction.</p>
+				<p>Different errors trigger tailored error messages. These error messages are accompanied by a buzzer sound, since not all users are going to be looking at the screen as they scan items. We allow users to dismiss errors and return to the interface to resolve them there (rather than barring users from committing the error at all). We safeguard invalid data entry by showing inline error messages for unresolved items (for inventory errors), error notifications on the category tree (for category limit errors), and an error summary if the user tries to submit the transaction.</p>
 
 			<p><div class="subheader-4" style="margin-top: 5%">Why it Works</div></p>
 				<div>
