--- a/fms-pos.html
+++ b/fms-pos.html
@@ -320,7 +320,7 @@
 
 			<p><div class="subheader-4" style="margin-top: 5%">Why it Works</div></p>
 				<div>
-					<p>This multi-tiered warning system protects the user from submitting orders with invalid data. It also provides flexibility - users can override certain (but not all) errors and choose when he or she wants to address the errors. This accommodates the myriad of different work-styles our users have.</p>
+					<p>This multi-tiered warning system protects the user from submitting orders with invalid data. It also provides flexibility - users can override certain (but not all) errors and choose when they want to address the errors. This accommodates the myriad of different work-styles our users have.</p>
 				</div>
 				
 			
