--- a/fms-pos.html
+++ b/fms-pos.html
@@ -461,7 +461,7 @@
 		<div class="subheader-3 left">Order History</div>
 		<div class="body right">
 			<div>
-				A user might viewing past orders for two main reasons: a participant wants to know what they got in a previous month, or the user herself wants to review the day's orders for accuracy. Enabling search by household was a no-brainer. The other key feature on this screen is the ability to filter by current location. 
+				A user views past orders for two main reasons: a participant wants to know what they got in a previous month, or the user herself wants to review the day's orders for accuracy. Enabling search by household was a no-brainer. The other key feature on this screen is the ability to filter by current location. 
 			</div>
 			<p>The details screen is intentionally very similar to the review screen to provide consistency and familiarity. As mentioned, users can not edit transactions, but they can void them or print them.</p>
 			
