--- a/fms-pos.html
+++ b/fms-pos.html
@@ -463,7 +463,7 @@
 			<div>
 				A user views past orders for two main reasons: a participant wants to know what they got in a previous month, or the user herself wants to review the day's orders for accuracy. Enabling search by household was a no-brainer. The other key feature on this screen is the ability to filter by current location. 
 			</div>
-			<p>The details screen is intentionally very similar to the review screen to provide consistency and familiarity. As mentioned, users can not edit transactions, but they can void them or print them.</p>
+			<p>The details screen is intentionally similar to the review screen. This provides consistency and familiarity. As mentioned, users cannot edit transactions, but they can void them or print them.</p>
 			
 			<img src="pics/fms/mobile-design-4.png" class="pic-right" style="border: none" alt="An iPad with an order history screen and order details screen">
 			
