--- a/fms-pos.html
+++ b/fms-pos.html
@@ -477,7 +477,7 @@
 			This was my first real-world consulting project. It had a very real budget, timeline, and pre-defined requirements. While I grew a lot as a designer, I also grew as a consultant and teammate; an integral part of any project is learning how to work with functional and technical teammates to assess level of effort, technical complexity, and overall feasibility of the designs. Because, at the end of the day, a pixel-perfect design is nothing without client buy-in and working code. Here are some of my key takeaways:
 				
 				<div class="subheader-2" style="margin-top: 5%">"Good Enough"</div>
-				<div>There's always a spectrum of possible, and never enough time, resources, or budget to get everything 100% right. The trick is to find the "good enough" point - to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within every other constraint.</div>
+				<div>There's always a spectrum of what's possible and never enough time, resources, or budget to get everything 100% right. The trick is to find the "good enough" point - to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within every other constraint.</div>
 				
 				<img src="pics/fms/reflection-1.png" class="pic-right" style="border: none; width: 70%" alt="A graph plotting 'Quality of Design' against 'Time, Resources, $.' The line rises to the right and then flattens.">
 
