got rid of inline margins and added space class

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<div class="proj-header">Grocery POS</div>
 			<div class="subheader-4">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</div>
 			<div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
-			<div class="tags" style="margin-top: 30px">
+			<div class="tags">
 				<div class="tag">UX</div>
 				<div class="tag">visual design</div>
 				<div class="tag">web design</div>
@@ -93,7 +93,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<div class="proj-header">RSVP'd</div>
 			<div class="subheader-4">Mobile app that helps event planners predict attendance by providing predictability, motivation, and accountability.</div>
 			<div class="subheader-2" >FALL 2018 • CARNEGIE MELLON</div>
-			<div class="tags" style="margin-top: 30px">
+			<div class="tags">
 				<div class="tag">UX</div>
 				<div class="tag">visual design</div>
 				<div class="tag">mobile design</div>
@@ -112,7 +112,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<div class="proj-header">Community Table</div>
 			<div class="subheader-4">Service solution that mutually benefits the nonprofit Just Harvest and the food insecure individuals it serves.</div>
 			<div class="subheader-2" >SPRING 2019 • CARNEGIE MELLON</div>
-			<div class="tags" style="margin-top: 30px">
+			<div class="tags">
 				<div class="tag">service design</div>
 				<div class="tag">nonprofit</div>
 			</div>
@@ -129,7 +129,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<div class="proj-header">Learning & Development Portal</div>
 			<div class="subheader-4">Website through which employees request continuing education programs.</div>
 			<div class="subheader-2">SUMMER 2018 • DELOITTE DIGITAL</div>
-			<div class="tags" style="margin-top: 30px">
+			<div class="tags">
 				<div class="tag">UX</div>
 				<div class="tag">user research</div>
 				<div class="tag">web design</div>
